--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
     </div>
     <div class="main2">
-      <h4>Menu</h4>
+      <h4>Menu items</h4>
       <section id="menu-img">
         <div  class="image-container">
             <img data-aos="fade-right" src="./assets/biriyani.jpg" alt="Descriptive alt Text">
